--- a/css/style.css
+++ b/css/style.css
@@ -364,13 +364,12 @@ a {
     font-size: 42px;
     font-weight: 800;
     color: #4A4A4A;
-    margin-bottom: 20px;
 }
 
 .process-description {
     font-size: 20px;
     color: #6A6A6A;
-    line-height: 1.5;
+    line-height: 1.3;
     font-family: 600;
 }
 
@@ -383,11 +382,11 @@ a {
 }
 
 .step-top .step-content {
-    bottom: 150px; /* Position text block above the timeline */
+    bottom: 120px; /* Position text block above the timeline */
 }
 
 .step-bottom .step-content {
-    top: 150px; /* Position text block below the timeline */
+    top: 120px; /* Position text block below the timeline */
 }
 
 /* --- ARROW STYLING (Pseudo-elements relative to .step-number) --- */
@@ -440,6 +439,17 @@ a {
     background: none; /* Override background-color */
     transform: translateX(-50%) translateY(0px); /* Adjust positioning */
 }
+
+/* Add this rule to move the top numbers (1 & 3) HIGHER */
+.step-top .step-number {
+    transform: translate(-50%, calc(-50% + 5px));
+}
+
+/* Add this rule to move the bottom numbers (2 & 4) LOWER */
+.step-bottom .step-number {
+    transform: translate(-50%, calc(-50% + 20px));
+}
+
 
 
 /* ===========================
